--- a/src/components/Controls.module.css
+++ b/src/components/Controls.module.css
@@ -6,8 +6,7 @@
   padding: 1rem;
   border-radius: 5px;
   background-color: #efe6dd;
-  margin: 1rem;
-  width: 90%;
+  width: 100%;
   border: 1px solid;
 }
 .resetBtn {
