--- a/src/components/Copy.module.css
+++ b/src/components/Copy.module.css
@@ -2,7 +2,7 @@
   background-color: #efe6dd;
   border-radius: 5px;
   margin-top: -2rem;
-  margin: 1rem;
+  margin: 0 1.4rem 1rem;
   padding: 1rem 2rem 1rem 1rem;
   position: relative;
   border: 1px solid;
